edit css form search

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -311,7 +311,7 @@ ul.list-artikel {
 
   img {
     max-width: 150px;
-    padding: 10px;
+    // padding: 10px;
   }
 }
 
@@ -356,7 +356,7 @@ footer {
 // SLIDER SEARCH
 
 #search{
-  padding: 10px 0;
+  padding: 0 0 20px 0;
   // margin-right: 15px;
   display: flex;
   justify-content : center;
